# insurance-dynamics

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
benchmarks/: benchmark.py
databricks/: benchmark_gas_vs_rolling.py  run_tests.py
notebooks/: benchmark.py
src/insurance_dynamics/: __init__.py
src/insurance_dynamics/changepoint/: __init__.py  _bocpd.py  _pelt.py  frequency.py  loss_ratio.py  plot.py  priors.py  report.py  result.py  retrospective.py  severity.py
src/insurance_dynamics/gas/: __init__.py  bootstrap.py  diagnostics.py  forecast.py  model.py
src/insurance_dynamics/gas/distributions/: beta.py  gamma.py  lognormal.py  negative_binomial.py  poisson.py  zip.py
tests/: conftest.py
tests/changepoint/: test_bocpd_core.py  test_bocpd_extended.py  test_changepoint_extended.py  test_edge_cases.py  test_frequency.py  test_loss_ratio.py  test_pelt.py  test_plot.py  test_priors.py  test_report.py  test_severity.py
tests/gas/: test_bootstrap.py  test_datasets.py  test_diagnostics.py  test_distributions.py  test_filter.py  test_forecast.py  test_gas_extended.py  test_model.py  test_panel.py
