[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-dynamics"
version = "0.1.0"
description = "Dynamic insurance pricing models: GAS score-driven filters and Bayesian change-point detection"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Burning Cost", email = "pricing.frontier@gmail.com" }]
keywords = [
    "insurance",
    "actuarial",
    "GAS",
    "score-driven",
    "changepoint",
    "BOCPD",
    "PELT",
    "regime detection",
    "bayesian",
    "claims",
    "frequency",
    "severity",
    "loss ratio",
    "pricing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "polars>=1.0",
    "ruptures>=1.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_dynamics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
